[package]
name = "dnsseed-rust"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

[dependencies]
bitcoin = "0.26"
bgp-rs = "0.6"
tokio = "0.1"
bytes = "0.4"
futures = "0.1"
rand = "0.8"
regex = "1"
num_cpus = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

[profile.dev]
panic = "abort"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
