[package]
name = "dnsseed-rust"
version = "0.1.0"
authors = ["matt"]
edition = "2021"

[dependencies]
bitcoin = "0.32"
bgp-rs = "0.6"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
rand = "0.10"
regex = "1"
num_cpus = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
pin-project-lite = "0.2"

[dependencies.tokio]
version = "1"
features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
]

[profile.dev]
panic = "abort"

[profile.release]
debug = true
lto = true
codegen-units = 1
panic = "abort"
